用户部分开发完成；

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,8 +39,7 @@
 <div style="text-align:center;">
 <p>版权所有：<a href="http://www.mycodes.net/" target="_blank">西辰软件</a></p>
 </div>
-	<script type="text/javascript"
-		src="${APP_PATH }/static/js/jquery-3.3.1.min.js"></script>
+<script src="/webjars/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript">
 /* $("#validate-submit").click(function(){
 	//alert($("#loginMsg").serialize());
