修复任务认领、存储、查询等逻辑，修复部分前端显示界面。

--- a/src/main/resources/static/css/selectpage.css
+++ b/src/main/resources/static/css/selectpage.css
@@ -144,7 +144,7 @@ div.sp_result_area.shadowDown{
     box-shadow: 0 3px 12px rgba(0,0,0,0.2);
     -moz-box-shadow: 0 3px 12px rgba(0,0,0,0.2);
     -webkit-box-shadow: 0 3px 12px rgba(0,0,0,0.2);
-
+    z-index: 11100;
     -webkit-animation: dropDownFadeInDown 200ms cubic-bezier(.23,1,.32,1);
     animation: dropDownFadeInDown 200ms cubic-bezier(.23,1,.32,1);
 }
