--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 <div class="container"><br/>
     <div class="alert alert-success">
         <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
-        Hello, <strong>openshell!</strong>
+        您的账户未启用，请联系管理员！
     </div>
     <div>
 
